# maxwell-kinesis-consumer

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: main.yml
config/: iamRoles.yml  resources.yml
src/: constants.py  utils.py
src/consumers/: mysql_consumer.py
src/db/: mysql_connection.py
src/handlers/: maxwell_kinesis_handler.py  maxwell_kinesis_mysql.py
