[tool.poetry]
name = "maxwell-kinesis-handler"
version = "0.1.0"
description = "Lambda function to read kinesis stream and insert into target database"
authors = [" Eric Pierce <epierce@hearsaycorp.com>"]

[tool.poetry.dependencies]
aws_kinesis_agg = "*"
boto3_type_annotations = "*"
python = "3.8.3"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
boto3 = "*"
black = "^19.10b0"
flake8 = "3.8.2"
flake8-black = "^0.1.1"
pre-commit = "^2.2.0"

[tool.black]
line-length = 200

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
